fix of alignment

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 }
 
 .cart{
+  display: flex;
   align-items: center;
   justify-content: center;
 }
